Add surds, factors and standard form

--- a/gcse/number/fractions.html
+++ b/gcse/number/fractions.html
@@ -67,7 +67,7 @@
     </div>
 
     <h2>4. Recurring Decimals to Fractions</h2>
-    <p>This is a high-level skill. We use algebra to cancel out the repeating part.</p>
+    <p>This is a high-level skill. We use algebra to cancel out the repeating part. More details and examples <a href="fractions2.html">here</a>.</p>
 
     <div class="example">
         <strong>Example 1: Single repeating digit (\(0.\dot{7}\))</strong><br>
